fix cronometer status gap

--- a/angular-app/src/app/integrations-page/cronometer-integration/cronometer-integration.component.scss
+++ b/angular-app/src/app/integrations-page/cronometer-integration/cronometer-integration.component.scss
@@ -20,6 +20,7 @@
 }
 .status-message {
 	display: flex;
+	gap: 0.5rem;
 
 	&.column {
 		flex-direction: column;
